--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Hello World
+H<!DOCTYPE html>
+<html>
+<head>
+  <title>_Porter Fanpage_</title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+  <div class = "container">
+    <div class = "nav">
+  <ul>
+    <li>item1</li>
+    <li>item2</li>
+    <li>item3</li>
+    <li>item4</li>
+  </ul>  
+    </div>
+    <div class = "main">
+  <h1> Jonathan Schmitt </h1>
+  <h3> oh- hi </h3>
+  <h3> bum bum bum da da dum dadum bum bum bum </h3>
+  <p>
+    Who survived, somebody new, anyone else...but <a href="https://virtualself.co/">you</a>
+  </p>
+  </div>
+  </div>
+</body>
+</html>
+
