--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <div class = "container">
     <div class = "nav">
   <ul>
-    <li>item1</li>
-    <li>item2</li>
-    <li>item3</li>
-    <li>item4</li>
+    <li><a href="https://katanaco.github.io/jonathancschmitt.com/">Home</a></li>
+    <li><a href="https://github.com/Katanaco">Github</a></li>
+    <li><a href="https://jonathanschmitt.myportfolio.com/">Portfolio</a></li>
+    <li><a href="https://buildingblocksofcastlesinthesky.com/">Blog</a></li>
   </ul>  
     </div>
     <div class = "main">
