--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>_Porter Fanpage_</title>
+  <title>_Jonathan Schmitt_</title>
   <meta charset="utf-8"/>
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
@@ -15,13 +15,21 @@
     <li><a href="https://buildingblocksofcastlesinthesky.com/">Blog</a></li>
   </ul>  
     </div>
-    <div class = "main">
-  <h1> Jonathan Schmitt </h1>
-  <h3> oh- hi </h3>
-  <h3> bum bum bum da da dum dadum bum bum bum </h3>
-  <p>
-    Who survived, somebody new, anyone else...but <a href="https://virtualself.co/">you</a>
-  </p>
+  <div class = "main">
+    <div class = "parallax">
+       <h1> Jonathan Schmitt </h1>
+    </div>
+
+	<div class = "aboutme">
+  	  <h2> About Me </h2>	
+  
+	  <p>
+My name is Jonathan Schmitt. I'm a developer and artist graduating from CU Boulder.
+	  </p>
+	</div>
+
+    <div class = "parallax"></div>
+
   </div>
   </div>
 </body>
