hey we're actually getting somewhere

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li><a href="https://github.com/Katanaco">Github</a></li>
     <li><a href="https://jonathanschmitt.myportfolio.com/">Portfolio</a></li>
     <li><a href="https://buildingblocksofcastlesinthesky.com/">Blog</a></li>
+    <li><a href="mailto:jonathan.schmitt@colorado.edu">Contact</a></li>
   </ul>  
     </div>
   <div class = "main">
@@ -21,10 +22,31 @@
     </div>
 
 	<div class = "aboutme">
-  	  <h2> About Me </h2>	
+
+	  <h2> Software Developer, Graphic Designer, etc. </h2>
   
 	  <p>
-My name is Jonathan Schmitt. I'm a developer and artist graduating from CU Boulder.
+My name is Jonathan Schmitt. I'll be graduating from CU Boulder in 2018 for Computer Science and Studio Arts. More than anything I like to build things.
+</p>
+<h3>
+Projects and Interests:
+</h3>
+<p>
+Algorithm and efficiency focused software <span style="float:right;">(I like puzzles)</span>
+</br>
+Charcoal, pen, and pencil media artwork <span style="float:right;">(I like drawing)</span>
+</br>
+Music composition and sound design <span style="float:right;">(I like music)</span>
+</br>
+Video production and storytelling <span style="float:right;">(I like short films)</span>
+</br>
+Digital artwork and album art design <span style="float:right;">(I really like music)</span>
+</br>
+Front end and UI development <span style="float:right;">(I like pretty things)</span>
+</br>
+Listening to music, and concerts <span style="float:right;">(I really really like music)</span>
+</br>
+General software development <span style="float:right;">(I just like to make things)</span>
 	  </p>
 	</div>
 
