--- a/index.html
+++ b/index.html
@@ -26,28 +26,40 @@
 	  <h2> Software Developer, Graphic Designer, etc. </h2>
   
 	  <p>
-My name is Jonathan Schmitt. I'll be graduating from CU Boulder in 2018 for Computer Science and Studio Arts. More than anything I like to build things.
+	My name is Jonathan Schmitt. I'll be graduating from CU Boulder in 2018 for Computer Science and Studio Arts. I have a passion for everything from software to art to music. I've been drawing and coding for 6+ years now. You can check out some of my work in all aspects through the nav bar, that's what it's for. I've been living and working in Boulder for almost 4 years, it's v exciting. Anyway, more than anything I like to build things.
 </p>
+<div style="margin: auto; width: 800px;">
 <h3>
-Projects and Interests:
+Skills and Interests
 </h3>
 <p>
-Algorithm and efficiency focused software <span style="float:right;">(I like puzzles)</span>
+Algorithm and efficiency focused software <span style="float:right;color:rgba(60,140,120,1);">(I like puzzles)</span>
 </br>
-Charcoal, pen, and pencil media artwork <span style="float:right;">(I like drawing)</span>
+Charcoal, pen, and pencil media artwork <span style="float:right;color:rgba(60,120,110,1);">(I like drawing)</span>
 </br>
-Music composition and sound design <span style="float:right;">(I like music)</span>
+Music composition and sound design <span style="float:right;color:rgba(60,120,110,1);">(I like music)</span>
 </br>
-Video production and storytelling <span style="float:right;">(I like short films)</span>
+Video production and storytelling <span style="float:right;color:rgba(60,120,110,1);">(I like short films)</span>
 </br>
-Digital artwork and album art design <span style="float:right;">(I really like music)</span>
+Digital artwork and album art design <span style="float:right;color:rgba(60,120,110,1);">(I really like music)</span>
 </br>
-Front end and UI development <span style="float:right;">(I like pretty things)</span>
+Front end and UI development <span style="float:right;color:rgba(60,120,110,1);">(I like pretty things)</span>
 </br>
-Listening to music, and concerts <span style="float:right;">(I really really like music)</span>
+Listening to music, and concerts <span style="float:right;color:rgba(60,120,110,1);">(I really really like music)</span>
 </br>
-General software development <span style="float:right;">(I just like to make things)</span>
+General software development <span style="float:right;color:rgba(60,120,110,1);">(I just like to make things)</span>
 	  </p>
+<h3>
+Socials
+</h3>
+<p style="text-align:center;">
+<a href="https://www.linkedin.com/in/jonathan-schmitt/">linked in<a>
+<span style="text-align:center;"><a href="https://twitter.com/jonnom_whatever">twitter<a></span>
+<span style="text-align:right;"><a href="https://instagram.com/jonnom_whatever/">instagram<a></span>
+</div>
+<h3>
+<(｡•︿•｡)>
+</h3>
 	</div>
 
     <div class = "parallax"></div>
