--- a/index.html
+++ b/index.html
@@ -1,71 +1,75 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>_Jonathan Schmitt_</title>
+  <title>Jonathan Schmitt</title>
   <meta charset="utf-8"/>
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
+
   <div class = "container">
     <div class = "nav">
-  <ul>
-    <li><a href="https://katanaco.github.io/jonathancschmitt.com/">Home</a></li>
-    <li><a href="https://github.com/Katanaco">Github</a></li>
-    <li><a href="https://jonathanschmitt.myportfolio.com/">Portfolio</a></li>
-    <li><a href="https://buildingblocksofcastlesinthesky.com/">Blog</a></li>
-    <li><a href="mailto:jonathan.schmitt@colorado.edu">Contact</a></li>
-  </ul>  
+      <ul>
+        <li><a href="https://katanaco.github.io/jonathancschmitt.com/">Home</a></li>
+        <li><a href="https://github.com/Katanaco">Github</a></li>
+        <li><a href="https://jonathanschmitt.myportfolio.com/">Portfolio</a></li>
+        <li><a href="https://buildingblocksofcastlesinthesky.com/">Blog</a></li>
+        <li><a href="mailto:jonathan.schmitt@colorado.edu">Contact</a></li>
+      </ul>  
     </div>
+
   <div class = "main">
-    <div class = "parallax">
+    
+    <div class = "parallax1">
        <h1> Jonathan Schmitt </h1>
     </div>
 
-	<div class = "aboutme">
+    <div class = "aboutme" style="height:450px;">
+      <h2> Software Developer, Graphic Designer, etc. </h2>
+      <p>My name is Jonathan Schmitt. I'll be graduating from CU Boulder in 2018 for Computer Science and Studio Arts. I have a passion for everything from software to art to music. I've been drawing and coding for 6+ years now. You can check out some of my work in all aspects through the nav bar, that's what it's for. You're welcome to investigate my coding work through my github, my drawing and digital artwork through my personal portfolio, my music tastes and miscellaneous work through my personal website, or contact me if you have any other queries. Aside from why I've done there's where I am: I've been living and working in Boulder for almost 4 years, it's v exciting.</p>
+      </br>
+      <p style="text-align: center;">Long story short I just like to make things.</p>
+    </div>
 
-	  <h2> Software Developer, Graphic Designer, etc. </h2>
-  
-	  <p>
-	My name is Jonathan Schmitt. I'll be graduating from CU Boulder in 2018 for Computer Science and Studio Arts. I have a passion for everything from software to art to music. I've been drawing and coding for 6+ years now. You can check out some of my work in all aspects through the nav bar, that's what it's for. I've been living and working in Boulder for almost 4 years, it's v exciting. Anyway, more than anything I like to build things.
-</p>
-<div style="margin: auto; width: 800px;">
-<h3>
-Skills and Interests
-</h3>
-<p>
-Algorithm and efficiency focused software <span style="float:right;color:rgba(60,140,120,1);">(I like puzzles)</span>
-</br>
-Charcoal, pen, and pencil media artwork <span style="float:right;color:rgba(60,120,110,1);">(I like drawing)</span>
-</br>
-Music composition and sound design <span style="float:right;color:rgba(60,120,110,1);">(I like music)</span>
-</br>
-Video production and storytelling <span style="float:right;color:rgba(60,120,110,1);">(I like short films)</span>
-</br>
-Digital artwork and album art design <span style="float:right;color:rgba(60,120,110,1);">(I really like music)</span>
-</br>
-Front end and UI development <span style="float:right;color:rgba(60,120,110,1);">(I like pretty things)</span>
-</br>
-Listening to music, and concerts <span style="float:right;color:rgba(60,120,110,1);">(I really really like music)</span>
-</br>
-General software development <span style="float:right;color:rgba(60,120,110,1);">(I just like to make things)</span>
-	  </p>
-<h3>
-Socials
-</h3>
-<p style="text-align:center;">
-<a href="https://www.linkedin.com/in/jonathan-schmitt-66a7abb5/">linked in<a>
-<span style="text-align:center;"><a href="https://twitter.com/jonnom_whatever">twitter<a></span>
-<span style="text-align:right;"><a href="https://instagram.com/jonnom_whatever/">instagram<a></span>
+  <div class = "parallax1"></div>
+
+  <div class = "aboutme" style="height:400px;">
+    <h3>Skills and Interests</h3>
+    <p style="padding-left:20%;padding-right:20%">
+    Algorithm and efficiency focused software<right>I like puzzles</right></br>
+    Charcoal, pen, and pencil media artwork<right>I like drawing</right></br>
+    Music composition and sound design<right>I like music</right></br>
+    Video production and storytelling<right>I like short films</right></br>
+    Digital artwork and album art design<right>I really like music</right></br>
+    Front end and UI development<right>I like pretty things</right></br>
+    Listening to music, and concerts<right>I really really like music</right></br>
+    General software development<right>I just like to make things</right>
+    </p>
+  </div> 
+
+  <div class = "parallax2"></div>
+
+  <div class = "aboutme" style = "height:200px;">   
+    <h3>Socials</h3>
+    <h4><a href="https://www.linkedin.com/in/jonathan-schmitt-66a7abb5/"><i class="fa fa-linkedin-square"></i><a>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="https://twitter.com/jonnom_whatever"><i class="fa fa-twitter-square"></i><a>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="https://instagram.com/jonnom_whatever/"><i class="fa fa-instagram"></i><a></h4>
+  </div>
+
+  <div class = "parallax2"></div>
+ 
+  <div class = "aboutme" style = "height:150px;">
+    </br>
+    <h3><(｡•︿•｡)></h3>
+  </div>
+
 </div>
-<h3>
-<(｡•︿•｡)>
-</h3>
-	</div>
-
-    <div class = "parallax"></div>
-
-  </div>
-  </div>
+</div>
 </body>
 </html>
 
