changed socials icons

--- a/index.html
+++ b/index.html
@@ -50,23 +50,26 @@
     </p>
   </div> 
 
-  <div class = "parallax2"></div>
-
-  <div class = "aboutme" style = "height:200px;">   
-    <h3>Socials</h3>
-    <h4><a href="https://www.linkedin.com/in/jonathan-schmitt-66a7abb5/"><i class="fa fa-linkedin-square"></i><a>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://twitter.com/jonnom_whatever"><i class="fa fa-twitter-square"></i><a>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://instagram.com/jonnom_whatever/"><i class="fa fa-instagram"></i><a></h4>
+  <div class = "parallax2">
   </div>
 
-  <div class = "parallax2"></div>
+    <div class = "aboutme" style="height:200px;"> 
+      <h3>Socials</h3>
+      <h4><a href="https://www.linkedin.com/in/jonathan-schmitt-66a7abb5/"><i class="fa fa-linkedin-square"></i></a>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="https://twitter.com/jonnom_whatever"><i class="fa fa-twitter-square"></i></a>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="https://instagram.com/jonnom_whatever/"><i class="fa fa-instagram"></i></a></h4>
+    </div>
+
+  <div class = "parallax2">
+  </div>
  
   <div class = "aboutme" style = "height:150px;">
     </br>
     <h3><(｡•︿•｡)></h3>
   </div>
+
 
 </div>
 </div>
