--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </p>
   </div> 
 
-  <div class = "parallax2">
+  <div class = "parallax2" style="height:400px;">
   </div>
 
     <div class = "aboutme" style="height:200px;"> 
@@ -62,14 +62,25 @@
       <a href="https://instagram.com/jonnom_whatever/"><i class="fa fa-instagram"></i></a></h4>
     </div>
 
-  <div class = "parallax2">
-  </div>
- 
-  <div class = "aboutme" style = "height:150px;">
-    </br>
-    <h3><(｡•︿•｡)></h3>
+  <div class = "parallax2" style="height:400px;"></div>
+  
+  <div class = "aboutme" style = "600px;">
+    <h3>things I've made</h3>
+    
   </div>
 
+ <div class = "parallax3" style="height:450px;"></div>
+   
+  <div class = "aboutme" style = "height:180px;">
+    <h3>who depends on you?</h3>
+    <h4 style="color: #9b89b2;">we depend on you</h4>
+  </div>
+
+ <div class = "parallax3" style="height:450px;"></div>
+  
+  <div class = "aboutme" style = "height:100px;">
+    <h3><(｡•︿•｡)></h3>
+  </div>
 
 </div>
 </div>
